# xalanot.github.io

./: C++ string  README.md  c++_string  c++_string.md  c_string.md  dynamic_allocation.md  index.md  pointer_references.md  pointer_references_1.md  pointer_references_2.md  pyproject.toml
blogs/taylor_series/scripts/: plot_intuition_section.py  plot_sinus_taylor.py
docs/matrix_vector_multiplication/scripts/: plot_linear_combination.py
math_blog/functions/: sinus.py
math_blog/plotting/: draw_commons.py  figure_commons.py  io.py
