[tool.poetry]
name = "math-blog"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"
packages = [{include = "math_blog"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.24.2"
matplotlib = "^3.7.1"
typer = "^0.7.0"
manim = "^0.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
